# sprofiler

./: .gitignore  CITATION.cff  Cargo.toml  Dockerfile  README.md  Vagrantfile  profile.json
.github/workflows/: ci.yaml  integration_test.yaml  pre-release.yaml  unittest.yaml
integration_test/: sprofiler-test.yaml
integration_test/sprofiler-bpf/: integration_test.sh
integration_test/sprofiler-bpf/hooks/: sprofiler-poststop.json  sprofiler-prestart.json
oci-runtime-spec/: Cargo.toml
oci-runtime-spec/src/: lib.rs
sprofiler/: .gitignore  Cargo.toml
sprofiler-bpf/: Cargo.toml  README.md  hoge.txt
sprofiler-bpf/.github/workflows/: unittest.yaml
sprofiler-bpf/examples/: tiny_tracer.rs
sprofiler-bpf/hooks/: sprofiler-poststop.json  sprofiler-prestart.json
sprofiler-bpf/scripts/: debug-container.sh
sprofiler-bpf/src/: ioutil.rs  lib.rs  main.rs  ociutil.rs
sprofiler-bpf/src/bpf/: mod.rs  systrace.bpf.c
sprofiler-bpf/src/command/: tracer.rs
sprofiler-sys/: Cargo.toml
sprofiler-sys/src/: lib.rs  oci.rs
sprofiler-sys/src/arch/x86_64/: mod.rs
sprofiler-sys/src/lang/: c.rs  golang.rs  mod.rs
sprofiler-test/: Cargo.toml
sprofiler-test/src/: hooks.rs  main.rs  podman.rs  seccomp.rs  testing.rs
sprofiler/conf/: sprofiler-poststop.json  sprofiler-prestart.json
sprofiler/src/: ioutil.rs  lib.rs  main.rs  profile_util.rs
sprofiler/src/command/: tracer.rs
sprofiler/src/dynamic/: annotation.rs  mod.rs
sprofiler/src/static/: mod.rs
