[package]
name = "sprofiler-bpf"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2018"
readme = "README.md"

license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libbpf-rs = "0.11.2"
anyhow = "1.0.38"
plain = "0.2.3"
structopt = "0.3.21"
sprofiler-sys = { path="../sprofiler-sys" }
serde_json = "1.0.62"
nix = "0.20.0"
signal-hook = { version = "0.3.6", features = ["extended-siginfo", "iterator"]  }
oci_runtime_spec = { path = "../oci-runtime-spec" }

[package.metadata.deb]
maintainer = "Takashi IIGUNI <iiguni.tks@gmail.com>"
copyright = "2021, Takashi IIGUNI <iiguni.tks@gmail.com>"
license-file = ["../LICENSE"]
depends = "libelf-dev,libgcc-s1,libbpf-dev"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sprofiler-bpf", "usr/bin/", "755"],
    ["hooks/sprofiler-prestart.json", "usr/share/containers/oci/hooks.d/", "644"],
    ["hooks/sprofiler-poststop.json", "usr/share/containers/oci/hooks.d/", "644"],
]
