[package]
name = "sprofiler-sys"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
lazy_static = "1.4.0"
regex = "1.4.3"
serde = "1.0.123"
serde_derive = "1.0.121"
serde_json = "1.0.62"
