[package]
name = "sprofiler"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
sprofiler-sys = { path = "../sprofiler-sys" }
structopt = "0.3.21"
