[package]
name = "sprofiler"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2021"

license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
serde_json = "1.0.64"
sprofiler-sys = { path = "../sprofiler-sys" }
structopt = "0.3.21"
oci_runtime_spec = { path = "../oci-runtime-spec" }
lazy_static = "1.4.0"
libbpf-rs = "0.11"
plain = "0.2.3"
nix = "0.23.1"
signal-hook = { version = "0.3.6", features = ["extended-siginfo", "iterator"]  }

[package.metadata.deb]

depends = "libelf1"
assets = [
    ["conf/sprofiler-prestart.json", "usr/share/containers/oci/hooks.d/", "644"],
    ["conf/sprofiler-poststop.json", "usr/share/containers/oci/hooks.d/", "644"]
]
